--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,4 @@ url = "https://mirrors.aliyun.com/pypi/simple/"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 [tool.mypy]
+plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
