--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ alembic = "^1.7.3"
 passlib = { version = "^1.7.4", extras = ["bcrypt"] }
 python-jose = { version = "^3.3.0", extras = ["cryptography"] }
 python-multipart = "^0.0.5"
+jinja2 = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^0.910"
@@ -24,8 +25,10 @@ black = "^21.9-beta.0"
 isort = "^5.9.3"
 flake8 = "^3.9.2"
 
+
 [tool.poetry.group.test.dependencies]
 pytest = "^6.2.5"
+
 
 [tool.mypy]
 plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
