--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ passlib = { version = "^1.7.4", extras = ["bcrypt"] }
 python-jose = { version = "^3.3.0", extras = ["cryptography"] }
 python-multipart = "^0.0.5"
 jinja2 = "^3.0.2"
+aiosmtplib = "^1.1.6"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^0.910"
