--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-jose = { version = "^3.3.0", extras = ["cryptography"] }
 python-multipart = "^0.0.5"
 jinja2 = "^3.0.2"
 aiosmtplib = "^1.1.6"
+loguru = "^0.5.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^0.910"
