--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ mypy = "^0.910"
 black = "^21.9-beta.0"
 isort = "^5.9.3"
 flake8 = "^3.9.2"
+pre-commit = "^2.16.0"
 
 
 [tool.poetry.group.test.dependencies]
