--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ jinja2 = "^3.0.2"
 aiosmtplib = "^1.1.6"
 loguru = "^0.5.3"
 sentry-sdk = "^1.5.0"
+dependency-injector = "^4.37.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^0.910"
