chore: add dev and test dependencies
sqlalchemy2-stubs, pytest-cov, httpx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["Grant Zhang <grant.zhang.s@outlook.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{ include = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -29,10 +30,13 @@ black = "^21.9-beta.0"
 isort = "^5.9.3"
 flake8 = "^3.9.2"
 pre-commit = "^2.16.0"
+sqlalchemy2-stubs = "^0.0.2-alpha.19"
 
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.2.5"
+pytest-cov = "^3.0.0"
+httpx = "^0.21.1"
 
 
 [tool.mypy]
@@ -42,6 +46,10 @@ plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
 
 [[tool.poetry.source]]
 name = "aliyun"
